[package]
name = "fore_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmedia_type = { git = "https://github.com/fabrlyn/fmedia_type.git", version = "0.1.0" }
nom = "7.1.3"
nom-uri = { git = "https://github.com/Skasselbard/nom-uri.git", version = "0.1.0" }
serde = { version = "1.0.196", features = ["derive"] }
url = "2.5.0"
